--- a/public/index.html
+++ b/public/index.html
@@ -7,4 +7,4 @@
 <canvas></canvas>
 
 <script src="/socket.io/socket.io.js"></script>
-<script src="index.js"></script>
+<script type="module" src="index.js"></script>
