configured to run with webpack

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -1,10 +1,16 @@
-<style>
-    body {
-        margin: 0;
-        background-color: 0;
-    }
-</style>
-<canvas></canvas>
+<!doctype html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="blood.png" content="image/png">
 
-<script src="/socket.io/socket.io.js"></script>
-<script src="./game.83fe12bdd000fb02aae4.js"></script>
+    <title>io.game</title>
+</head>
+<body>
+    <script src="/socket.io/socket.io.js"></script>
+    <canvas></canvas>
+</body>
+</html>
