move players now handled throug servergit add .git add .. no cheating))) sorry

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -10,6 +10,7 @@
     <title>io.game</title>
 </head>
 <body>
+    <button id="play-button">PLAY</button>
     <script src="/socket.io/socket.io.js"></script>
     <canvas></canvas>
 </body>
