added html and css base design

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -10,8 +10,45 @@
     <title>io.game</title>
 </head>
 <body>
-    <button id="play-button">PLAY</button>
     <script src="/socket.io/socket.io.js"></script>
-    <canvas></canvas>
+
+    <div id="play-menu" class="hidden">
+        <h1> IO.GAME</h1>
+        <p>
+            Stay alive and shoot other players!
+            <br />
+            Use mouse to move.
+        </p>
+        <p>
+            See the source code on <a href="https://github.com/kremenevskiy/io.game" target="_blank">Github</a>
+            <br />
+            Created by <a href="https://github.com/kremenevskiy" target="_blank">Vladislav Kremenevskiy</a>
+        </p>
+
+        <input type="text" id="username-input" placeholder="Username" autocomplete="off">
+        <button id="play-button">PLAY</button>
+    </div>
+    <div id="leaderboard" class="hidden">
+        <table>
+            <caption>Leaderboard</caption>
+            <tr>
+                <th class="leaderboard_info">Username</th>
+                <th class="leaderboard_info">Score</th>
+            </tr>
+            <tr><td></td><td></td></tr>
+            <tr><td></td><td></td></tr>
+            <tr><td></td><td></td></tr>
+            <tr><td></td><td></td></tr>
+            <tr><td></td><td></td></tr>
+        </table>
+    </div>
+    <div id="disconnect-modal" class="hidden">
+        <div>
+            <h2>Disconnected from Server</h2>
+            <hr />
+            <button id="reconnect-button">RECONNECT</button>
+        </div>
+    </div>
+    <canvas id="game-canvas"></canvas>
 </body>
 </html>
