--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -49,6 +49,6 @@
             <button id="reconnect-button">RECONNECT</button>
         </div>
     </div>
-    <canvas id="game-canvas"></canvas>
+    <canvas id="game-canvas" class="hidden"></canvas>
 </body>
 </html>
