show other menu if dead

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -57,6 +57,13 @@
             <button id="no-connect-button">RECONNECT</button>
         </div>
     </div>
+    <div id="dead-menu" class="hidden">
+        <div>
+            <h2>Ooops... You dead :(</h2>
+            <hr />
+            <button id="dead-button">Go main menu</button>
+        </div>
+    </div>
 
     <canvas id="game-canvas" class="hidden"></canvas>
 </body>
