add upgrade menu

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -64,6 +64,40 @@
             <button id="dead-button">Go main menu</button>
         </div>
     </div>
+    <div id="upgrade-menu" class="hidden">
+        <div>
+            <p>
+                <button id="dmgUp-btn">DMG++</button>
+                <label>1</label><label> lvl</label>
+            </p>
+            <p>
+                <button id="dmgDec-btn">DMG--</button>
+                <label>1</label><label> lvl</label>
+            </p>
+
+            <p>
+                <button id="health-btn">Health++</button>
+                <label>1</label><label> lvl</label>
+
+            </p>
+
+            <p>
+                <button id="regen-btn">Regen++</button>
+                <label>1</label><label> lvl</label>
+            </p>
+
+            <p>
+                <button id="range-btn">Range++</button>
+                <label>1</label><label> lvl</label>
+            </p>
+
+            <p>
+                <button id="speed-btn">Speed++</button>
+                <label>1</label><label> lvl</label>
+            </p>
+        </div>
+    </div>
+
 
     <canvas id="game-canvas" class="hidden"></canvas>
 </body>
