send messages about to add health, speed, damage, reload... on server

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -95,6 +95,10 @@
                 <button id="speed-btn">Speed++</button>
                 <label>1</label><label> lvl</label>
             </p>
+            <p>
+                <button id="reload-btn">Reload++</button>
+                <label>1</label><label> lvl</label>
+            </p>
         </div>
     </div>
 
