--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -64,10 +64,10 @@
             <button id="dead-button">Go main menu</button>
         </div>
     </div>
-    <div id="upgrade-menu" class="hidden">
+    <div id="upgrade-menu" class="hidden disabled" >
         <div>
             <p>
-                <button id="dmgUp-btn">DMG++</button>
+                <button id="dmgUp-btn" onClick="">DMG++</button>
                 <label>1</label><label> lvl</label>
             </p>
             <p>
