lvl labels are updating with player click update

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -68,36 +68,36 @@
         <div>
             <p>
                 <button id="dmgUp-btn" onClick="">DMG++</button>
-                <label>1</label><label> lvl</label>
+                <label id="dmgUp-lbl">1</label><label> lvl</label>
             </p>
             <p>
                 <button id="dmgDec-btn">DMG--</button>
-                <label>1</label><label> lvl</label>
+                <label id="dmgDec-lbl">1</label><label> lvl</label>
             </p>
 
             <p>
                 <button id="health-btn">Health++</button>
-                <label>1</label><label> lvl</label>
+                <label id="health-lbl">1</label><label> lvl</label>
 
             </p>
 
             <p>
                 <button id="regen-btn">Regen++</button>
-                <label>1</label><label> lvl</label>
+                <label id="regen-lbl">1</label><label> lvl</label>
             </p>
 
             <p>
                 <button id="range-btn">Range++</button>
-                <label>1</label><label> lvl</label>
+                <label id="range-lbl">1</label><label> lvl</label>
             </p>
 
             <p>
                 <button id="speed-btn">Speed++</button>
-                <label>1</label><label> lvl</label>
+                <label id="speed-lbl">1</label><label> lvl</label>
             </p>
             <p>
                 <button id="reload-btn">Reload++</button>
-                <label>1</label><label> lvl</label>
+                <label id="reload-lbl">1</label><label> lvl</label>
             </p>
         </div>
     </div>
