starting add registration on server

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -101,6 +101,15 @@
             </p>
         </div>
     </div>
+    <div>
+        <h3>Registration</h3>
+        <form id="reg-form">
+            <input type="text" autocomplete="off" id="username" placeholder="Username"/>
+            <input type="password" autocomplete="off" id="password" placeholder="Password"/>
+            <input type="submit" value="Submit Form"/>
+        </form>
+    </div>
+
 
 
     <canvas id="game-canvas" class="hidden"></canvas>
