registration and login system added using mvc

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -101,11 +101,26 @@
             </p>
         </div>
     </div>
-    <div>
+    <div class="Registration">
         <h3>Registration</h3>
         <form id="reg-form">
             <input type="text" autocomplete="off" id="username" placeholder="Username"/>
             <input type="password" autocomplete="off" id="password" placeholder="Password"/>
+            <input type="submit" value="Submit Form"/>
+        </form>
+    </div>
+    <div class="Login">
+        <h3>Login</h3>
+        <form id="login-form">
+            <input type="text" autocomplete="off" id="login_username" placeholder="Username"/>
+            <input type="password" autocomplete="off" id="login_password" placeholder="Password"/>
+            <input type="submit" value="Submit Form"/>
+        </form>
+    </div>
+    <div class="change_password">
+        <h3>changePassword</h3>
+        <form id="change_password-form">
+            <input type="password" autocomplete="off" id="new_password" placeholder="Password"/>
             <input type="submit" value="Submit Form"/>
         </form>
     </div>
