--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -101,27 +101,46 @@
             </p>
         </div>
     </div>
-    <div class="Registration">
-        <h3>Registration</h3>
+
+
+    <div id="Registration" class="hidden auth">
+
         <form id="reg-form">
+            <!--            <h2>Sign Up</h2>-->
+            <h3>Registration</h3>
+            <label for="username">Username</label>
             <input type="text" autocomplete="off" id="username" placeholder="Username"/>
+            <label for="password">Password</label>
             <input type="password" autocomplete="off" id="password" placeholder="Password"/>
-            <input type="submit" value="Submit Form"/>
+            <button type="submit" class="authButton">Sign Up</button>
+            <!--            <input type="submit" value="Submit Form"/>-->
         </form>
     </div>
-    <div class="Login">
-        <h3>Login</h3>
+    <div id="Login" class="auth">
+
         <form id="login-form">
+            <h3>Login</h3>
+            <label for="login_username">Username</label>
             <input type="text" autocomplete="off" id="login_username" placeholder="Username"/>
+            <label for="login_password">Password</label>
             <input type="password" autocomplete="off" id="login_password" placeholder="Password"/>
-            <input type="submit" value="Submit Form"/>
+            <button type="submit" class="authButton">Login</button>
+            <br>
+            <div id="not_logged">
+                <p>Not Registered? <button id="signup-btn" class="authButton">Sign Up</button></p>
+
+            </div>
         </form>
+
     </div>
-    <div class="change_password">
+    <div id="change_password" class="auth">
         <h3>changePassword</h3>
         <form id="change_password-form">
+            <label for="old_password">Old Password</label>
+            <input type="password" autocomplete="off" id="old_password" placeholder="Password"/>
+            <label for="new_password">New Password</label>
             <input type="password" autocomplete="off" id="new_password" placeholder="Password"/>
-            <input type="submit" value="Submit Form"/>
+            <button type="submit" id="changePass" class="authButton">Change Password</button>
         </form>
     </div>
 
