--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -102,46 +102,60 @@
         </div>
     </div>
 
+    <div id="auth" class="">
+        <div id="Registration_menu" class="hidden auth">
 
-    <div id="Registration" class="hidden auth">
+            <form id="registration-form">
+                <!--            <h2>Sign Up</h2>-->
+                <h3>Registration</h3>
+                <label for="username">Username</label>
+                <input type="text" autocomplete="off" id="username" placeholder="Username"/>
+                <div class="username error"></div>
+                <label for="password">Password</label>
+                <input type="password" autocomplete="off" id="password" placeholder="Password"/>
+                <div class="password error"></div>
+                <button type="submit" class="authButton">Sign Up</button>
+                <!--            <input type="submit" value="Submit Form"/>-->
+                <br>
+                <div id="back_login">
+                    <p>Already Registered? <button type="button" id="go-login-btn" class="authButton">Login</button></p>
 
-        <form id="reg-form">
-            <!--            <h2>Sign Up</h2>-->
-            <h3>Registration</h3>
-            <label for="username">Username</label>
-            <input type="text" autocomplete="off" id="username" placeholder="Username"/>
-            <label for="password">Password</label>
-            <input type="password" autocomplete="off" id="password" placeholder="Password"/>
-            <button type="submit" class="authButton">Sign Up</button>
-            <!--            <input type="submit" value="Submit Form"/>-->
-        </form>
-    </div>
-    <div id="Login" class="auth">
+                </div>
+            </form>
+        </div>
 
-        <form id="login-form">
-            <h3>Login</h3>
-            <label for="login_username">Username</label>
-            <input type="text" autocomplete="off" id="login_username" placeholder="Username"/>
-            <label for="login_password">Password</label>
-            <input type="password" autocomplete="off" id="login_password" placeholder="Password"/>
-            <button type="submit" class="authButton">Login</button>
-            <br>
-            <div id="not_logged">
-                <p>Not Registered? <button id="signup-btn" class="authButton">Sign Up</button></p>
 
-            </div>
-        </form>
+        <div id="Login_menu" class="auth hidden">
 
-    </div>
-    <div id="change_password" class="auth">
-        <h3>changePassword</h3>
-        <form id="change_password-form">
-            <label for="old_password">Old Password</label>
-            <input type="password" autocomplete="off" id="old_password" placeholder="Password"/>
-            <label for="new_password">New Password</label>
-            <input type="password" autocomplete="off" id="new_password" placeholder="Password"/>
-            <button type="submit" id="changePass" class="authButton">Change Password</button>
-        </form>
+            <form id="login-form">
+                <h3>Login</h3>
+                <label for="login_username">Username</label>
+                <input type="text" autocomplete="off" id="login_username" placeholder="Username"/>
+                <div class="username error"></div>
+                <label for="login_password">Password</label>
+                <input type="password" autocomplete="off" id="login_password" placeholder="Password"/>
+                <div class="password error"></div>
+                <button type="submit" class="authButton">Login</button>
+                <br>
+                <div id="not_logged">
+                    <p>Not Registered? <button type="button" id="go-signup-btn" class="authButton">Sign Up</button></p>
+
+                </div>
+            </form>
+
+        </div>
+        <div id="change_password_menu" class="hidden auth">
+            <h3>changePassword</h3>
+            <form id="change_password-form">
+                <label for="old_password">Old Password</label>
+                <input type="password" autocomplete="off" id="old_password" placeholder="Password"/>
+                <div class="oldPassword error"></div>
+                <label for="new_password">New Password</label>
+                <input type="password" autocomplete="off" id="new_password" placeholder="Password"/>
+                <div class="newPassword error"></div>
+                <button type="submit" id="changePass" class="authButton">Change Password</button>
+            </form>
+        </div>
     </div>
 
 
