registration errors handling done

--- a/src/client/html/index.html
+++ b/src/client/html/index.html
@@ -108,11 +108,12 @@
             <form id="registration-form">
                 <!--            <h2>Sign Up</h2>-->
                 <h3>Registration</h3>
-                <label for="username">Username</label>
-                <input type="text" autocomplete="off" id="username" placeholder="Username"/>
+                <div class="register success"></div>
+                <label for="register_username">Username</label>
+                <input type="text" autocomplete="off" id="register_username" placeholder="Username"/>
                 <div class="username error"></div>
-                <label for="password">Password</label>
-                <input type="password" autocomplete="off" id="password" placeholder="Password"/>
+                <label for="register_password">Password</label>
+                <input type="password" autocomplete="off" id="register_password" placeholder="Password"/>
                 <div class="password error"></div>
                 <button type="submit" class="authButton">Sign Up</button>
                 <!--            <input type="submit" value="Submit Form"/>-->
@@ -125,7 +126,7 @@
         </div>
 
 
-        <div id="Login_menu" class="auth hidden">
+        <div id="Login_menu" class="auth">
 
             <form id="login-form">
                 <h3>Login</h3>
